--- a/Landing_Page.css
+++ b/Landing_Page.css
@@ -1,4 +1,178 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: segoe script;
+}
+body{
+    background-color: mistyrose;
+    background-image: url(./Static/background1.PNG);
+    background-size: cover;
+    width: 1920px;
+    height:2000px;
+}
+.container{
+    width: 1920px;
+    height:2000px;
+}
+.row1{
+    width:1920px;
+    height: 160px;
+    margin-top: 50px;
+}
+.frontview{
+    width: 70%;
+    height:150px;
+    margin-left: 320px;
+    border-radius: 5%;
+}
+.row2{
+    width:1920px;
+    height: 305px;
+}
+.logo{
+    margin-left:645px;
+    height: 500px;
+    margin-top: -70px;
+} 
+.row3{
+    width:1920px;
+    height: 160px;
+}
+.textbox1{
+    width: 1500px;
+    height:175px;
+    margin-left: 250px;
+    margin-top: 20px;
+    text-align: center;
+}
+.row4,
+.row5,
+.row6,
+.row7{
+    width:1920px;
+    height: 300px;
+    display:flex;
+}
+.textbox2{
+    width: 400px;
+    height:200px;
+    margin-left: 350px;
+    margin-top: 25px;
+    text-align: center;
+}
+.thick{
+    height:250px;
+    margin-top: 5px;
+    margin-left:400px;
+    border-radius: 50%;
+}
+.thick:hover{
+    scale: 2.5;
+    cursor: pointer;
+}
+.picbox2 h3{
+    margin-left: 455px;
+}
+.full{
+    height:250px;
+    margin-left:400px;
+    border-radius: 50%;
+}
+.full:hover{
+    scale: 2.5;
+    cursor: pointer;
+}
+.picbox3 h3{
+    margin-left:425px;
+}
+.textbox3{
+    width: 500px;
+    height:200px;
+    margin-left: 350px;
+    margin-top: 80px;
+    text-align: center;
+}
+.textbox4{
+    width: 800px;
+    height:175px;
+    margin-left: 250px;
+    margin-top: 100px;
+    text-align: center;
+}
+.natural{
+    height:250px;
+    margin-left:350px;
+    border-radius: 50%;
+}
+.natural:hover{
+    scale: 2.5;
+    cursor: pointer;
+}
+.picbox4 h3{
+    margin-left:375px;
+}
+.loyalty{
+    height:250px;
+    margin-top: 25px;
+    margin-left:350px;
+    border-radius: 20%;
+}
+.loyalty:hover{
+    scale: 2.5;
+    cursor: pointer;
+}
+.sierra{
+    height:250px;
+    margin-top: 25px;
+    margin-left:150px;
+    border-radius: 20%;
+}
+.sierra:hover{
+    scale: 3.0;
+    cursor: pointer;
+}
+.wash{
+    height:250px;
+    margin-top: 25px;
+    margin-left:150px;
+    border-radius: 20%;
+}
+.wash:hover{
+    scale: 2.5;
+    cursor: pointer;
+}
+.row8{
+    width:1920px;
+    height: 75px;
+    display:flex;
+    gap:120px;
+    text-align: center;
+    margin-left: 375px;
+}
+.row9{
+    width:1920px;
+    height: 250px;
+    text-align: center;
+}
+.email{
+    margin-top:50px;
+    margin-bottom:15px;
+    margin-left: 700px;
+    display:flex;
+}
+.email input{
+    width: 400px;
+    height: 50px;
+}
+.email button{
+    background-color: mistyrose;
+    border: 2px solid black;
+    cursor:pointer;
+    width: 150px;
+    height:50px;
+    box-shadow: 3px 2px 2px 2px  black;
+    border: 1px solid black
+}
+.email button:active{
+    box-shadow: inset black 4px 4px 2px;
 }
